Pushing because I'm stuck.

--- a/app/views/cash_flows/index.html.erb
+++ b/app/views/cash_flows/index.html.erb
@@ -1,6 +1,6 @@
 <div ng-controller="CashFlowsCtrl">
 
-<h1>Listing Cash Flows</h1>
+<h1>Total Cash Flow</h1>
 <div ng-repeat="cashFlow in cashFlows">
   <h3>Total Income</h3>
     $ {{cashFlow.total_income}}
