Not aving anything. commiting because lost in the tangled mess that is my code

--- a/app/views/cash_flows/_form.html.erb
+++ b/app/views/cash_flows/_form.html.erb
@@ -10,7 +10,10 @@
       </ul>
     </div>
   <% end %>
+  <% end %>
+<% form_for(@income) do |f| %>
 <div class="md-padding" layout="row">
+<%#= f.fields_for :incomes do |income| %>
 <div flex="30"><md-input-container >
   <%= f.label :rent %>
   <%= f.text_field :rent %>
@@ -31,79 +34,8 @@
   <%= f.label :late_fee %>
   <%= f.text_field :late_fee %>
 </md-input-container></div>
-<div flex="30"><md-input-container >
-  <%= f.label :gardening %>
-  <%= f.text_field :gardening %>
-</md-input-container></div>
-<div flex="30"><md-input-container >
-  <%= f.label :insurance %>
-  <%= f.text_field :insurance %>
-</md-input-container></div>
-</div>
-<div class="md-padding" layout="row">
-<div flex="30"><md-input-container >
-  <%= f.label :maintenance %>
-  <%= f.text_field :maintenance %>
-</md-input-container></div>
-<div flex="30"><md-input-container >
-  <%= f.label :off_site_management_exp %>
-  <%= f.text_field :off_site_management_exp %>
-</md-input-container></div>
-<div flex="30"><md-input-container >
-  <%= f.label :postage_and_delivery %>
-  <%= f.text_field :postage_and_delivery %>
-</md-input-container></div>
-</div>
-<div class="md-padding" layout="row">
-<div flex="30"><md-input-container >
-  <%= f.label :painting %>
-  <%= f.text_field :painting %>
-</md-input-container></div>
-<div flex="30"><md-input-container >
-  <%= f.label :building_supplies %>
-  <%= f.text_field :building_supplies %>
-</md-input-container></div>
-<div flex="30"><md-input-container >
-  <%= f.label :taxes_and_licenses %>
-  <%= f.text_field :taxes_and_licenses %>
-</md-input-container></div>
-</div>
-<div class="md-padding" layout="row">
-<div flex="30"><md-input-container >
-  <%= f.label :trash %>
-  <%= f.text_field :trash %>
-</md-input-container></div>
-<div flex="30"><md-input-container >
-  <%= f.label :telephone_expense %>
-  <%= f.text_field :telephone_expense %>
-</md-input-container></div>
-<div flex="30"><md-input-container >
-  <%= f.label :utilities_expense %>
-  <%= f.text_field :utilities_expense %>
-</md-input-container></div>
-</div>
-<div class="md-padding" layout="row">
 
-<div flex="30"><md-input-container >
-  <%= f.label :water_and_sewage %>
-  <%= f.text_field :water_and_sewage %>
-</md-input-container></div>
-
-<div flex="30"><md-input-container >
-  <%= f.label :tenant_deposit %>
-  <%= f.text_field :tenant_deposit %>
-</md-input-container></div>
-<div flex="30"><md-input-container >
-  <%= f.label :tennant_refund %>
-  <%= f.text_field :tennant_refund %>
-</md-input-container></div>
-</div>
-<div class="md-padding" layout="row">
-<div flex="30"><md-input-container >
-  <%= f.label  :owner_draw %>
-  <%= f.text_field  :owner_draw %>
-</md-input-container></div>
-
+<%# end %>
 
 </div>
 
